Chapter3/2.5/manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-2-5-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput-2-5
  template:
    metadata:
      labels:
        app: logoutput-2-5
    spec:
      volumes:
        - name: log-output-config-vol
          configMap:
            name: log-output-config
      containers:
        - name: logoutput-2-5
          image: carlossss1011/2_5_logoutput
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: log-output-config-vol
              mountPath: /app/config
              readOnly: true
