Chapter3/2.5/manifests/log-output-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-2-5-svc
  namespace: exercises
spec:
  selector:
    app: logoutput-2-5
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
