Chapter3/2.5/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-2-5-svc
  namespace: exercises
spec:
  selector:
    app: pingpong-2-5
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
